unpackaged/main/default/objects/Case_Audit_Log__c/Case_Audit_Log__c.object-meta.xml
<CustomObject>
    <label>Case Audit Log</label>
    <nameField>
        <displayFormat>CAL-{00000000}</displayFormat>
        <label>Case Audit Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Case Audit Logs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>