unpackaged/main/default/objects/Case_Audit_Log__c/fields/Business_Hours__c.field-meta.xml
<CustomField>
    <fullName>Business_Hours__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Hours</label>
    <referenceTo>BusinessHours</referenceTo>
    <relationshipName>Case_Audit_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>