unpackaged/main/default/objects/Case_Audit_Log__c/fields/Case_Advocate_Id__c.field-meta.xml
<CustomField>
    <fullName>Case_Advocate_Id__c</fullName>
    <formula>Case__r.CaseNumber +&apos;-&apos;+Advocate__r.EmployeeNumber</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Advocate Id</label>
    <type>Text</type>
</CustomField>