unpackaged/main/default/objects/Case_Audit_Log__c/fields/Current_Role__c.field-meta.xml
<CustomField>
    <fullName>Current_Role__c</fullName>
    <description>Indicates the role of the current owner of a Tax Res Case</description>
    <label>Current Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Specialist</fullName>
            </value>
            <value>
                <fullName>Owner</fullName>
            </value>
            <value>
                <fullName>Coordinator</fullName>
                <isActive>false</isActive>
                <label>Coordinator</label>
            </value>
            <value>
                <fullName>Notice Analyst</fullName>
                <isActive>false</isActive>
                <label>Notice Analyst</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>