unpackaged/main/default/objects/Case_Audit_Log__c/fields/Duration_in_Seconds_Adjusted__c.field-meta.xml
<CustomField>
    <fullName>Duration_in_Seconds_Adjusted__c</fullName>
    <label>Duration in Seconds Adjusted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>