unpackaged/main/default/objects/Case_Audit_Log__c/fields/Event_Type__c.field-meta.xml
<CustomField>
    <fullName>Event_Type__c</fullName>
    <label>Event Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Phone</fullName>
            </value>
            <value>
                <fullName>Status Change</fullName>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Gusto</fullName>
            </value>
            <value>
                <fullName>Panda</fullName>
            </value>
            <value>
                <fullName>Hippo</fullName>
            </value>
            <value>
                <fullName>Web</fullName>
            </value>
            <value>
                <fullName>ApIntego</fullName>
            </value>
            <value>
                <fullName>Success Email</fullName>
            </value>
            <value>
                <fullName>Cobra Email</fullName>
            </value>
            <value>
                <fullName>Partner Setup</fullName>
            </value>
            <value>
                <fullName>Partner Transfer</fullName>
            </value>
            <value>
                <fullName>Phone Callback</fullName>
            </value>
            <value>
                <fullName>Outgoing Sales Email</fullName>
            </value>
            <value>
                <fullName>QSEHRA Email</fullName>
            </value>
            <value>
                <fullName>Outreach Email</fullName>
            </value>
            <value>
                <fullName>Follow Up Email</fullName>
            </value>
            <value>
                <fullName>Contact Carrier</fullName>
            </value>
            <value>
                <fullName>Escalation</fullName>
            </value>
            <value>
                <fullName>Auto First Response Email</fullName>
            </value>
            <value>
                <fullName>Email-POC</fullName>
            </value>
            <value>
                <fullName>Email Status Change</fullName>
            </value>
            <value>
                <fullName>Owner Change</fullName>
            </value>
            <value>
                <fullName>Intercom</fullName>
            </value>
            <value>
                <fullName>Internal Chat</fullName>
            </value>
            <value>
                <fullName>Gusto Wallet</fullName>
            </value>
            <value>
                <fullName>Ticket</fullName>
            </value>
            <value>
                <fullName>Electronic Notice</fullName>
            </value>
            <value>
                <fullName>Screen Scrape</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>