unpackaged/main/default/objects/Case_Audit_Log__c/fields/Genesys_Ani__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Ani__c</fullName>
    <label>Genesys Ani</label>
    <length>20</length>
    <type>Text</type>
</CustomField>