unpackaged/main/default/objects/Case_Audit_Log__c/fields/Genesys_Id__c.field-meta.xml
<CustomField>
    <fullName>Genesys_Id__c</fullName>
    <externalId>true</externalId>
    <label>Genesys Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>