unpackaged/main/default/objects/Case_Audit_Log__c/fields/Live_Channel_Wait_Time_In_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Live_Channel_Wait_Time_In_Seconds__c</fullName>
    <label>Live Channel Wait Time In Seconds</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>