unpackaged/main/default/objects/Case_Audit_Log__c/fields/To_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>To_Date_Time__c</fullName>
    <label>To Date Time</label>
    <type>DateTime</type>
</CustomField>